docs/kubernetes/k8s-resources-type/gatewayapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-service
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80 # Port the service is listening on
      targetPort: 80 # Port the container is listening on (if unset, defaults to equal port value)
